--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "^3.4",
+        "symfony/web-profiler-bundle": "^3.4",
         "symfony/web-server-bundle": "^3.4",
         "symfony/yaml": "^3.4"
     },
